@@ -50,6 +50,7 @@ NEWS
   * fixed dropping last character of evhost pattern (#161)
   * print helpful error message on conditionals in global block (#1550)
   * decode url before matching in mod_rewrite (#1720)
+  * fixed conditional patching of ldap filter (#1564)
 
 - 1.4.19 - 2008-03-10
 
